crates/ink/tests/ui/contract/fail/impl/impl-block-using-static-env-no-marker.stderr
error[E0599]: no function or associated item named `env` found for struct `contract::Contract` in the current scope
  --> tests/ui/contract/fail/impl/impl-block-using-static-env-no-marker.rs:22:27
   |
6  |     pub struct Contract {}
   |     ------------------- function or associated item `env` not found for this struct
...
22 |             let _ = Self::env().caller();
   |                           ^^^ function or associated item not found in `contract::Contract`
   |
note: if you're trying to build a new `contract::Contract` consider using one of the following associated functions:
      contract::_::<impl contract::Contract>::constructor
      contract::Contract::constructor_impl
  --> tests/ui/contract/fail/impl/impl-block-using-static-env-no-marker.rs:10:9
   |
10 |         pub fn constructor() -> Self {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
21 |         fn constructor_impl() -> Self {
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: items from traits can only be used if the trait is in scope
help: trait `StaticEnv` which provides `env` is implemented but not in scope; perhaps you want to import it
   |
3  + use ink::codegen::env::StaticEnv;
   |
